@@ -1,3 +1,13 @@
+2010-08-03  Kent Tamura  <tkent@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        [DRT/Chromium] Remove dependency of base/md5.h
+        https://bugs.webkit.org/show_bug.cgi?id=43403
+
+        * DumpRenderTree/chromium/TestShell.cpp:
+        (TestShell::dumpImage): Use wtf/MD5.h
+
 2010-08-03  Joseph Pecoraro  <joepeck@webkit.org>
 
         Reviewed by David Kilzer.
